@@ -12,7 +12,9 @@ and Util.setTimeout(pFunction [, pCallBack, pTime])
 
 * Added function getCurrentDir to DOM module.
 
-* Fixed bug with terminal load
+* Fixed bug with terminal load.
+
+* From now api url on client readed from config.json.
 
 
 2012.12.12, Version 0.1.8
